# tgbotxx

./: .clang-format  .gitignore  CMakeLists.txt  README.md  unix-debug-generate.sh  unix-release-generate.sh  unix-relwithdeb-generate.sh  vcpkg.json
cmake/: add_clang_format.cmake  clang_options.cmake  make_coverage_target.cmake  make_executable_sanitized_target.cmake  make_sanitized_target.cmake  make_shared_library_sanitized_target.cmake  make_static_library_sanitized_target.cmake  msvc_set_target_options.cmake  packaging.cmake
projects/tgbotxx/: CMakeLists.txt  logger.cpp  logger.h  stdafx.h  sync_http_client.cpp  sync_http_client.h  utils.cpp  utils.h
